# SemesterAverageBetterVersion

./: README.md
src/: CMakeLists.txt  calculus.cpp  calculus.h  course.h  data_structures.cpp  data_structures.h  functions.cpp  functions.h  main.cpp  student.cpp  student.h
